[project]
name = "ascii-clock"
version = "0.1.0"
description = "A simple ascii clock"
authors = [{name ="kyrlian", email= "kyrlian@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["textual>=0.81.0"]

[project.scripts]
aclock = "ascii_clock.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
